<resources>
    <string name="app_name">Cartogramaps</string>
    <string name="labelCreditos">Credits 👨🏻‍💻</string>
    <string name="labelConfig">Settings ⚙️</string>
    <string name="labelInicio">Main</string>
    <string name="labelSair">Exit</string>
    <string name="labelVoltar">Back</string>
    <string name="msgFormatoCordenadas"><b>Geographic coordinates format</b></string>
    <string name="msgUnidadeVelocidade"><b>Speed unit</b></string>
    <string name="msgOrientacaoMapa"><b>Map orientation</b></string>
    <string name="msgTipoMapa"><b>Map type</b></string>
    <string name="msgInfoTrafego"><b>Traffic information</b></string>
    <string name="labelHistorico">History 🕙</string>
    <string name="msgWIP">Page under</string>
    <string name="msgWIP2">construction.</string>
    <string name="labelDev"><b> Developers </b></string>
    <string name="labelAppInfo"><b> Application details </b></string>
    <string name="labelKm">(Kilometers per hour)</string>
    <string name="labelMph">(Miles per hour)</string>
    <string name="labelGrau1">Decimal Degree</string>
    <string name="labelGrau2">Degrees Decimal Minutes</string>
    <string name="labelGrau3">Degrees Minutes Seconds</string>
    <string name="labelNavegacao">Navigation 🗺️</string>
    <string name="labelVetorial">Vectorial</string>
    <string name="labelSatelite">Satellite image</string>
    <string name="labelMap1">None (you manually choose map orientation)</string>
    <string name="labelMap2">North up (map north aligned with device top)</string>
    <string name="labelMap3">Course up (map top aligned with direction)</string>
    <string name="labelSalvar">Save</string>
    <string name="msgSalvar">Settings saved</string>
    <string name="dev1">Felipe Santos dos Anjos</string>
    <string name="dev2">Guilherme Mateus do Carmo</string>
    <string name="dev3">Matheus Rodrigues de Andrade</string>
    <string name="appInfo">Developed in Java, using Android Studio, app targeting Android API 19, App version 2.0</string>
    <color name="background1">#1D1A1A</color>
    <color name="btnColor">#0FD629</color>
    <string name="labelH4">Where are we going today? 🚗</string>
    <string name="labelH1">Hello,</string>
    <string name="labelH2">So-and-so</string>
    <string name="labelH3">Good to see you again.</string>
    <string name="labelLanguage"><b> Developed with Java </b></string>
    <string name="labelIDE"><b> IDE Android Studio </b></string>
    <string name="labelVersion"><b> App version: 1.2 </b></string>
    <string name="labelRadioKm" translatable="false">Km/h</string>
    <string name="labelRadioMph" translatable="false">Mph</string>
    <string name="labelRadioVetorial">Vectorial</string>
    <string name="labelRadioSatelite">Satellite</string>
    <string name="labelGnss" translatable="false">GNSS  🛰️</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="labelMarker">Marker in Salvador</string>
    <string name="msgLocPermissionDenied">❌ Permission denied to show current location.</string>
    <string name="msgLocButtonClicked">Location button clicked</string>
    <string name="msgLocAtual">Current location (Lat, Long, Alt): \\n</string>
    <string name="msgLastLocationDenied">Missing permission to show your last location.</string>
    <string name="labelLocLong">"Longitude (degrees) = "</string>
    <string name="labelLocSpeed">"Speed (m/s) = "</string>
    <string name="labelLocLat">"Latitude (degrees) = "</string>
    <string name="labelLocCourse">"Course (degrees) = "</string>
    <string name="labelLoc">Current location data</string>
    <string name="labelLocUnavailable">Unavailable</string>
    <string name="labelLastLoc">Last location data</string>
    <string name="labelLocAccuracy">"Accuracy (meters) = "</string>
    <string name="labelUpdateUnavailable">Update data unavailable</string>
    <string name="labelLastPosition">Last known location</string>
    <string name="labelLocMarker">Current location</string>
    <string name="msgNoGPS">Location disabled</string>
    <string name="msgNoNet">Network unavailable</string>
    <string name="labelLocSpeedKm">"Speed (Km/h) = "</string>
    <string name="labelLocSpeedMph">"Speed (Mph) = "</string>
    <string name="labelLocationUpdates"><b>Location updates</b></string>
    <string name="labelLocLatDDM">"Latitude (degrees minutes) = "</string>
    <string name="labelLocLongDDM">"Longitude (degrees minutes) = "</string>
    <string name="labelLocLatDMS">"Latitude (degrees minutes seconds) = "</string>
    <string name="labelLocLongDMS">"Longitude (degrees minutes seconds) = "</string>
    <string name="labelGnssRadar" translatable="false">Radar 🛰</string>
    <string name="labelGnssDetails">Details 🔎</string>
    <string name="labelGnssSelector"><b> GNSS Selector </b></string>
    <string name="labelSatelliteNumber">Satellite count:</string>
    <string name="labelGnssDetailOrg">"Caption: SVID |  Azimuth | Elevation |  Used In Fix |  SNR "</string>
    <string name="labelGnssUnavailable">GNSS Unavailable</string>
    <string name="labelPositionSysData">Position System Data:</string>
    <string name="labelHistoryMap">Map 🗺</string>
    <string name="labelHistoryTable">Table 🔎</string>
    <string name="labelHistorySelector">History Selector</string>
    <string name="title_activity_historico_mapa">HistoricoMapaActivity</string>
    <string name="labelHistoryStart">"Start "</string>
    <string name="labelHistoryEnd">"End "</string>
    <string name="labelSatelliteCount">"Visible: "</string>
    <string name="labelSatelliteUse">"Using: "</string>
    <string name="labelCaptions">Caption</string>
    <string name="red">"Red 🟥 "</string>
    <string name="laranja">"Orange 🟧 "</string>
    <string name="yellow">"Yellow 🟨 "</string>
    <string name="lightgreen">Lightgreen:</string>
    <string name="verde">"Green 🟩 "</string>
    <string name="circulo">"Circle ● "</string>
    <string name="losango">"Diamond ◆ "</string>
    <string name="triangulo">"Triangle ▲ "</string>
    <string name="square">"Square ■ "</string>
    <string name="UE">🇪🇺</string>
    <string name="USA">"United States "</string>
    <string name="unknown">Unknown</string>
    <string name="signalQuality">Signal quality (0 to 100)</string>
    <string name="figures">Constellations</string>
    <string name="hexagon">"Hexagon ⬣ "</string>
    <string name="rosa">"Pink 🟪 "</string>
    <string name="HistoryLog" translatable="false">Log</string>
</resources>