<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background1"
        tools:context=".MainActivity">


        <Button
            android:id="@+id/buttonNavegacao"
            android:layout_width="225dp"
            android:layout_height="47.5dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1.0"
            android:background="@drawable/button"
            android:text="@string/labelNavegacao"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:backgroundTint="#2ED52E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonConfig"
            android:layout_width="225dp"
            android:layout_height="47.5dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1.0"
            android:background="@drawable/button"
            android:text="@string/labelConfig"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.366" />

        <Button
            android:id="@+id/buttonGnss"
            android:layout_width="225dp"
            android:layout_height="47.5dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1.0"
            android:background="@drawable/button"
            android:text="@string/labelGnss"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.475" />

        <Button
            android:id="@+id/buttonHistorico"
            android:layout_width="225dp"
            android:layout_height="47.5dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1.0"
            android:background="@drawable/button"
            android:text="@string/labelHistorico"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.581" />

        <Button
            android:id="@+id/buttonCredit"
            android:layout_width="225dp"
            android:layout_height="47.5dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1.0"
            android:background="@drawable/button"
            android:text="@string/labelCreditos"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.686" />

        <Button
            android:id="@+id/buttonFechar"
            android:layout_width="251dp"
            android:layout_height="60dp"
            android:background="@drawable/button"
            android:text="@string/labelSair"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:backgroundTint="#2ED52E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.84" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="141dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="224dp"
            android:layout_marginBottom="651dp"
            android:text="@string/labelH1"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="197dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="133dp"
            android:layout_marginBottom="651dp"
            android:text="@string/labelH2"
            android:textColor="#0FD629"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelH3"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.147"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelH4"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonNavegacao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            app:layout_constraintVertical_bias="0.236"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>